# simple-defender-py

./: LICENSE  NOTICE  README.md  pyproject.toml
.github/workflows/: benchmark.yml
benchmarks/: run_benchmarks.py
examples/: demo.py  pyproject.toml
src/simple_defender/: __init__.py  __main__.py  config.py  defender.py  field_extractor.py  onnx_classifier.py  pattern_detector.py  patterns.py  server.py  tier2_classifier.py  types.py
src/simple_defender/sanitizers/: __init__.py  encoding_detector.py  normalizer.py  pattern_remover.py  role_stripper.py  sanitizer.py
tests/: test_batch.py  test_defender.py  test_field_extractor.py  test_onnx_classifier.py  test_patterns.py  test_sanitizers.py  test_server.py  test_tier2_classifier.py
