[project]
name = "simple-defender-py"
version = "0.1.0"
description = "Minimal Python port of @stackone/defender — prompt injection detection"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "onnxruntime>=1.16",
    "tokenizers>=0.19",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "datasets>=2.19",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/simple_defender"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
